# strength

./: CMakeLists.txt  LICENSE  README.md  crc16.cpp
.github/workflows/: cmake.yml
